# arne

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  bevy_port_config.json  config.json  config.toml  idea.md  run_win.sh
app/: Cargo.toml
app/src/: app.rs  genetic_algorithm.rs  image_processing.rs  main.rs  neural_network.rs
crates/genetic_algorithm/: Cargo.toml
crates/genetic_algorithm/src/: lib.rs
crates/neural_network/: Cargo.toml
crates/neural_network/src/: lib.rs
crates/utils/src/: lib.rs
data/drafter_7/annotations/: C73_D1_P1.xml  C73_D1_P2.xml  C73_D1_P3.xml  C73_D1_P4.xml  C73_D2_P1.xml  C73_D2_P2.xml  C73_D2_P3.xml  C73_D2_P4.xml  C74_D1_P1.xml  C74_D1_P2.xml  C74_D1_P3.xml  C74_D1_P4.xml  C74_D2_P1.xml  C74_D2_P2.xml  C74_D2_P3.xml  C74_D2_P4.xml  C75_D1_P1.xml  C75_D1_P2.xml  C75_D1_P3.xml  C75_D1_P4.xml  C75_D2_P1.xml  C75_D2_P2.xml  C75_D2_P3.xml  C75_D2_P4.xml  C76_D1_P1.xml  C76_D1_P2.xml  C76_D1_P3.xml  C76_D1_P4.xml  C76_D2_P1.xml  C76_D2_P2.xml  C76_D2_P3.xml  C76_D2_P4.xml  C77_D1_P1.xml  C77_D1_P2.xml  C77_D1_P3.xml  C77_D1_P4.xml  C77_D2_P1.xml  C77_D2_P2.xml  C77_D2_P3.xml  C77_D2_P4.xml  (+56 more)
data/drafter_7/instances/: C73_D1_P1.json  C74_D2_P1.json  C75_D1_P4.json  C76_D2_P3.json  C78_D1_P2.json  C83_D2_P2.json  C83_D2_P4.json  C84_D1_P2.json
documentation/: README.md
documentation/01-08/: README.toml
documentation/01-08/agents/0/02/: netlist.net
documentation/01-08/agents/1/02/: netlist.net
documentation/01-08/agents/14/02/: netlist.net
documentation/01-08/agents/15/02/: netlist.net
documentation/01-08/agents/16/02/: netlist.net
documentation/01-08/agents/19/02/: netlist.net
documentation/01-08/agents/20/02/: netlist.net
documentation/01-08/single-agents/9/: README.md  config.toml  network.dot  network.json
documentation/01-08/start-of-day/: 02.toml
documentation/02-08/got-output/: config.toml
documentation/02-08/multi-images/: config.toml
documentation/04-11/: README.md
documentation/04-11/not-in-sync/best_agent_14709841408520181251/C1_D2_P1.jpg/: optimal_netlist.net
documentation/06-08/: config.toml
documentation/06-08/agent-0-end/t1-01/0/: network.json
documentation/06-08/agent-0-end/t1-01/1/: network.json
documentation/06-08/agent-0-end/t1-01/2/: network.dot  network.json
documentation/06-08/agent-0-end/t1-01/3/: network.dot  network.json
documentation/06-08/agent-0-end/t1-01/4/: network.json
documentation/06-08/agent-0-end/t1-01/5/: network.json
documentation/06-08/agent-0-end/t1-01/6/: network.json
documentation/06-08/agent-0-end/t1-01/7/: network.json
documentation/06-08/agent-0-end/t1-01/8/: network.json
documentation/06-08/agent-0-end/t1-01/9/: network.json
documentation/06-08/agent-0-end/t1-02/: netlist.net
documentation/06-08/agent-0-end/t1-02/0/: network.json
documentation/06-08/agent-0-end/t1-02/1/: network.json
documentation/06-08/agent-0-end/t1-02/2/: network.json
documentation/06-08/agent-0-end/t1-02/4/: network.json
documentation/06-08/agent-0-end/t1-02/5/: network.dot
documentation/06-08/agent-0-end/t1-02/6/: network.json
documentation/06-08/agent-0-end/t1-02/7/: network.json
documentation/06-08/agent-0-end/t1-02/8/: network.json
documentation/06-08/agent-0-end/t1-02/9/: network.json
documentation/06-08/agent-0-end/t1-04/0/: network.dot
documentation/06-08/agent-0-end/t1-04/1/: network.dot
documentation/06-08/agent-0-end/t1-04/3/: network.json
documentation/06-08/agent-0-end/t1-04/4/: network.dot
documentation/06-08/agent-0-end/t1-04/5/: network.json
documentation/06-08/agent-0-end/t1-04/6/: network.dot
documentation/06-08/agent-0-end/t1-04/7/: network.dot  network.json
documentation/06-08/agent-0-end/t1-04/8/: network.dot
documentation/06-09/: config.toml
documentation/06-09/end/: config.toml
documentation/06-11/100-gens/: README.md
documentation/06-11/100-gens/agents/: config.txt
documentation/07-09/: iteration_results.txt
documentation/07-11/: README.md
documentation/07-11/agents/: config.txt
documentation/08-08/only-pixel-follow-1/: config.toml
documentation/08-08/only-pixel-follow-2/: README.md  config.toml
documentation/08-08/recognize-components/: README.md
documentation/10-09/best-iterations/1/: config.json
documentation/10-09/best-iterations/11/: config.json
documentation/10-09/best-iterations/20/: config.json
documentation/10-09/best-iterations/23/: config.json
documentation/10-09/best-iterations/25/: config.json
documentation/10-09/best-iterations/32/: config.json
documentation/10-09/best-iterations/7/: config.json
documentation/10-09/best-iterations/9/: config.json
documentation/11-10/: README.md
documentation/11-10/docs1/0/: config.json
documentation/11-10/docs2/0/: config.json
documentation/13-10/docs1/: README.md  config.toml
documentation/13-10/docs1/0/: config.json
documentation/14-09/: README.md
documentation/14-11/: README.md
documentation/22-09/last-test-of-day/: README.md  config.json
documentation/22-09/tested-config/: README.md  config.json
documentation/24-08/: config.toml
documentation/24-10/agents/: config.txt
documentation/25-10/: README.md
documentation/25-10/agents/: config.txt
documentation/26-06/: README.md
documentation/27-09/almost/: README.md
documentation/27-09/almost/0/: config.json
documentation/27-09/next-after-almost/: README.md
documentation/27-09/next-after-almost/0/: config.json
documentation/27-10/: README.md
documentation/27-10/agents/: config.txt
documentation/28-07/: README.md
documentation/28-08/: README.md  config.toml
documentation/early-stages/: README.md
documentation/early-stages/images/descriptions/: 02A.toml  t1-02.toml  t1-04.toml
images/: best_agent.dot
images/descriptions/: 02.toml  t1-03.toml
images/unit_tests/: annotation.xml
netlists/: draft.net
saves/rnn/: 0.json  1.json  2.json
src/: annotations.rs  genetic_algorithm.rs  image.rs  image_processing.rs  main.rs  netlist.rs  neural_network.rs  plotting.rs  training.rs  utils.rs
test/saves/rnn/: test_rnn.json
(+5686 files in other folders)
