[package]
name = "arne"
description = "Artificial Recurrent Network Evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.5"
rayon = "1.1"
approx = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
lazy_static = "1.4.0"
rand_distr = "0.4.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
nalgebra = "0.33.0"
image = {version = "=0.24.9", features=["rayon"]}
imageproc = "0.23.0"
static-toml = "1.2.0"
log = "0.4.21"
env_logger = "0.11.3"
indicatif = {version = "0.17.8", features = ["rayon"]}
skeletonize = "0.2"
toml = "0.8.16"
rusttype = "0.9.3"
clap = { version = "4.5.13", features = ["derive"] }
serde-xml-rs = "0.6.0"

[dependencies.petgraph]
version = "0.6.5"
features = ["serde-1"]
