[package]
name = "arne"
description = "Artificial Recurrent Network Evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.5"
rayon = "1.1"
approx = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
lazy_static = "1.4.0"
rand_distr = "0.4.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
nalgebra = "0.33.0"
image = {version = "=0.24.9", features=["rayon"]}
imageproc = "0.23.0"
static-toml = "1.2.0"
log = "0.4.21"
env_logger = "0.11.3"
indicatif = {version = "0.17.8", features = ["rayon"]}
skeletonize = "0.2"
toml = "0.8.16"
rusttype = "0.9.3"
clap = { version = "4.5.13", features = ["derive"] }
xml2json-rs = "1.0.1"
bevy = "0.14.1"

[dependencies.petgraph]
version = "0.6.5"
features = ["serde-1"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# more performance at the cost of very slow compile times
# configuration for the most aggressive optimizations possible
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
