[package]
name = "arne"
description = "Artificial Recurrent Network Evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.13.2"
genetic_algorithm = {path = "../crates/genetic_algorithm"}
neural_network = {path = "../crates/neural_network"}
image_processing = {path = "../crates/image_processing"}
utils = {path = "../crates/utils"}
