[package]
name = "arne"
description = "Artificial Recurrent Network Evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.5"
rayon = "1.1"
approx = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
petgraph = "0.6.5"
lazy_static = "1.4.0"
rand_distr = "0.4.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}

genetic_algorithm = {path = "../crates/genetic_algorithm"}
neural_network = {path = "../crates/neural_network"}
image_processing = {path = "../crates/image_processing"}
utils = {path = "../crates/utils"}
